# omnitils

./: CHANGELOG.md  CHANGES.md  README.md  data_files.py  pyproject.toml
.github/: release.yml
.github/workflows/: publish-pypi.yml
omnitils/: __init__.py  dicts.py  download.py  enums.py  exceptions.py  files.py  files_data.py  folders.py  github.py  logs.py  metaclass.py  modules.py  properties.py  rate_limit.py  schema.py  strings.py
omnitils/_cli/: __init__.py  testing.py
omnitils/api/: __init__.py  gdrive.py  github.py
omnitils/fetch/: __init__.py  _core.py  download.py
omnitils/files/: __init__.py  _core.py  archive.py  data.py  folders.py
omnitils/img/: __init__.py  _core.py
omnitils/test/: __init__.py  bench.py
