[project]
name = "omnitils"
version = "1.4.6"
description = "Universal reusable Python utils for the modern human."
authors = [{ name = "Investigamer", email = "freethoughtleft@gmail.com" }]
license = "MPL-2.0"
readme = "README.md"
keywords = [
    "omnitils",
    "utilities",
    "utils",
    "files",
    "schema",
    "test",
    "benchmark",
    "enums",
    "logs",
    "investigamer",
]
classifiers = [
    # Development status
    "Development Status :: 4 - Beta",

    # License
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",

    # Audience and Purpose
    "Intended Audience :: Developers",
    "Topic :: Utilities",

    # Supported Python versions
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10,<4.0"

[tool.poetry]
packages = [{ include = "omnitils" }, { include = "omnitils/py.typed" }]

[tool.poetry.urls]
"Changelog" = "https://github.com/Investigamer/omnitils/blob/main/CHANGELOG.md"
"Discord" = "https://discord.gg/magicproxies"
"Issues" = "https://github.com/Investigamer/omnitils/issues"
"Source" = "https://github.com/Investigamer/omnitils"
"Sponsor" = "https://patreon.com/mpcfill"

[tool.poetry.dependencies]
requests = "^2.32.5"
PyYAML = "^6.0.3"
yarl = "^1.22.0"
tomlkit = "^0.13.3"
pillow = "^11.3.0"
limits = "^5.6.0"
backoff = "^2.2.1"
pathvalidate = "^3.3.1"
py7zr = "^1.0.0"
tqdm = "^4.67.1"
tomli = "^2.2.1"
pydantic = "^2.11.7"
loguru = "^0.7.3"
click = "^8.3.0"
python-dateutil = "^2.9.0.post0"

[tool.poetry.group.dev.dependencies]
commitizen = "^4.9.1"
mypy = "^1.18.2"
pytest = "^8.4.2"

[tool.commitizen]
version_provider = "pep621"
encoding = "utf-8"
tag_format = "$major.$minor.$patch"
update_changelog_on_bump = true
version_files = ["pyproject.toml:version", "omnitils/__init__.py:__version__"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = "information"