[project]
name = "omnitils"
version = "1.4.6"
description = "Universal reusable Python utils for the modern human."
authors = [{ name = "Investigamer", email = "dev@hexproof.io" }]
license = "MPL-2.0"
readme = "README.md"
requires-python = ">=3.10,<3.15"
keywords = ["omnitils", "utilities", "utils", "files", "schema", "test", "benchmark", "enums", "logs", "investigamer"]
classifiers = [
    # Development status
    "Development Status :: 4 - Beta",

    # License
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",

    # Audience and Purpose
    "Intended Audience :: Developers",
    "Topic :: Utilities",

    # Supported Python versions
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
dependencies = [
    "requests>=2.32.4,<3",
    "PyYAML>=6.0.1,<7",
    "yarl>=1.9.4,<2",
    "tomlkit>=0.13.2,<1",
    "pillow>=12.1.0,<13",
    "ratelimit>=2.2.1,<3",
    "backoff>=2.2.1,<3",
    "pathvalidate>=3.2.0,<4",
    "py7zr>=1.1.0,<2",
    "tqdm>=4.66.1,<5",
    "tomli>=2.0.1,<3",
    "pydantic>=2.9.2,<3",
    "loguru>=0.7.2,<0.8",
    "click>=8.1.7,<9",
    "python-dateutil>=2.9.0.post0,<3",
    "limits>=5.8.0",
    "typer>=0.20.1,<1"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.19.1,<2",
    "pytest>=9.0.1,<10",
    "commitizen>=4.13.1,<5"
]

[project.urls]
Changelog = "https://github.com/Investigamer/omnitils/blob/main/CHANGELOG.md"
Discord = "https://discord.gg/magicproxies"
Issues = "https://github.com/Investigamer/omnitils/issues"
Source = "https://github.com/Investigamer/omnitils"
Sponsor = "https://patreon.com/mpcfill"

[project.scripts]
hooks-cz = 'hooks.commitizen:hooks'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["omnitils"]

[tool.commitizen]
version_provider = "pep621"
encoding = "utf-8"
tag_format = "$major.$minor.$patch"
update_changelog_on_bump = true
version_files = [
    "omnitils/__init__.py:__version__"
]
pre_bump_hooks = [
    "uv run hooks-cz pre-bump"
]